@@ -114,11 +114,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>17</release>
                     <compilerArgs>
                         <compilerArg>-parameters</compilerArg>
-                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
                 </configuration>
                 <executions>
@@ -387,7 +385,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.6</version>
+            <version>42.4.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
